[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-env"
version = "1.0.0"
description = "A real-world customer support triage environment"
authors = [
  { name="James" }
]
readme = "README.md"
requires-python = ">=3.10"
# These should match your requirements.txt
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0",
    "torch",
    "sentence-transformers"
]

[project.scripts]
server = "server.app:main"
